@@ -12,17 +12,19 @@ chan *chanview_add (chanview *cv, char *name, void *family, void *userdata, gboo
 int chanview_get_size (chanview *cv);
 GtkWidget *chanview_get_box (chanview *cv);
 void chanview_move_focus (chanview *cv, gboolean relative, int num);
-chan *chanview_get_focused (chanview *cv);
 GtkOrientation chanview_get_orientation (chanview *cv);
 void chanview_set_orientation (chanview *cv, gboolean vertical);
 
 int chan_get_tag (chan *ch);
+void *chan_get_userdata (chan *ch);
 void chan_focus (chan *ch);
 void chan_move (chan *ch, int delta);
 void chan_move_family (chan *ch, int delta);
 void chan_set_color (chan *ch, PangoAttrList *list);
 void chan_rename (chan *ch, char *new_name, int trunc_len);
 gboolean chan_remove (chan *ch, gboolean force);
+gboolean chan_is_collapsed (chan *ch);
+chan * chan_get_parent (chan *ch);
 
 #define FOCUS_NEW_ALL 1
 #define FOCUS_NEW_ONLY_ASKED 2
